test/conformance/chainsaw/ttl/invalid-label/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    cleanup.kyverno.io/ttl: 10ay
