test/conformance/chainsaw/ttl/invalid-label/01-pod.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: pod
spec:
  timeouts: {}
  try:
  - apply:
      file: pod.yaml
  - assert:
      file: pod-assert.yaml
  finally:
  - script:
      content: sleep 5
