test/conformance/chainsaw/ttl/invalid-label/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: invalid-label
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod-assert.yaml
  - name: step-03
    try:
    - assert:
        file: pod-assert.yaml
